@@ -1,7 +1,7 @@
 
-R Under development (unstable) (2020-02-12 r77795) -- "Unsuffered Consequences"
+R Under development (unstable) (2020-02-14 r77804) -- "Unsuffered Consequences"
 Copyright (C) 2020 The R Foundation for Statistical Computing
-Platform: x86_64-pc-linux-gnu (64-bit)
+Platform: x86_64-apple-darwin18.7.0/x86_64 (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -39,16 +39,23 @@ Type 'q()' to quit R.
 > 
 > ## Avoid printing to unwarranted accuracy
 > od <- options(digits = 5)
+> 
+> ## Simulated EC50 experiment with count data
 > x <- 0:10
 > y <- c(26, 17, 13, 12, 20, 5, 9, 8, 5, 4, 8)
 > 
 > ## Easy one-dimensional MLE:
 > nLL <- function(lambda) -sum(stats::dpois(y, lambda, log = TRUE))
 > fit0 <- mle(nLL, start = list(lambda = 5), nobs = NROW(y))
+> 
+> ## sanity check --- notice that "nobs" must be input
+> ## (not guaranteed to be meaningful for any likelihood)
+> stopifnot(nobs(fit0) == length(y))
+> 
+> 
 > # For 1D, this is preferable:
 > fit1 <- mle(nLL, start = list(lambda = 5), nobs = NROW(y),
 +             method = "Brent", lower = 1, upper = 20)
-> stopifnot(nobs(fit0) == length(y))
 > 
 > ## This needs a constrained parameter space: most methods will accept NA
 > ll <- function(ymax = 15, xhalf = 6) {
@@ -72,13 +79,14 @@ mle(minuslogl = ll, fixed = list(xhalf = 6))
 Coefficients:
   ymax  xhalf 
 19.288  6.000 
+> 
 > ## alternative using bounds on optimization
 > ll2 <- function(ymax = 15, xhalf = 6)
 +     -sum(stats::dpois(y, lambda = ymax/(1+x/xhalf), log = TRUE))
-> mle(ll2, method = "L-BFGS-B", lower = rep(0, 2))
+> mle(ll2, lower = rep(0, 2))
 
 Call:
-mle(minuslogl = ll2, method = "L-BFGS-B", lower = rep(0, 2))
+mle(minuslogl = ll2, lower = rep(0, 2))
 
 Coefficients:
    ymax   xhalf 
@@ -117,10 +125,10 @@ xhalf  1.6616  6.4792
 > ## Use bounded optimization
 > ## The lower bounds are really > 0,
 > ## but we use >=0 to stress-test profiling
-> (fit2 <- mle(ll, method = "L-BFGS-B", lower = c(0, 0)))
+> (fit2 <- mle(ll2, lower = c(0, 0)))
 
 Call:
-mle(minuslogl = ll, method = "L-BFGS-B", lower = c(0, 0))
+mle(minuslogl = ll2, lower = c(0, 0))
 
 Coefficients:
    ymax   xhalf 
@@ -146,7 +154,7 @@ lymax  17.8815 34.6186
 lxhalf  1.6615  6.4794
 > 
 > # regression tests for bounded cases (this was broken in R 3.x)
-> fit4 <- mle(ll, method = "L-BFGS-B", lower = c(0, 4)) # has max on boundary
+> fit4 <- mle(ll, lower = c(0, 4)) # has max on boundary
 > confint(fit4)
 Profiling...
        2.5 %  97.5 %
@@ -154,15 +162,85 @@ ymax  17.446 26.5081
 xhalf     NA  6.9109
 > 
 > ## direct check that fixed= and constraints work together
-> mle(ll, method = "L-BFGS-B", lower = c(0, 4), fixed=list(ymax=23)) # has max on boundary
+> mle(ll, lower = c(0, 4), fixed=list(ymax=23)) # has max on boundary
 
 Call:
-mle(minuslogl = ll, method = "L-BFGS-B", fixed = list(ymax = 23), 
-    lower = c(0, 4))
+mle(minuslogl = ll, fixed = list(ymax = 23), lower = c(0, 4))
 
 Coefficients:
  ymax xhalf 
    23     4 
+> 
+> ## Linear regression using MLE
+> x <- 1:10 
+> y <- c(0.48, 2.24, 2.22, 5.15, 4.64, 5.53, 7, 8.8, 7.67, 9.23)
+> 
+> LM_mll <- function(formula, data = environment(formula))
++ {
++      X <- model.matrix(formula, data)
++      b0 <- numeric(NCOL(X))
++      names(b0) <- colnames(X)
++      function(b=b0, sigma=1)
++          -sum(dnorm(y, X %*% b, sigma, log=TRUE))
++ }
+> 
+> mll <- LM_mll(~x)
+> 
+> summary(lm(y~x))
+
+Call:
+lm(formula = y ~ x)
+
+Residuals:
+   Min     1Q Median     3Q    Max 
+-0.937 -0.500 -0.211  0.278  1.273 
+
+Coefficients:
+            Estimate Std. Error t value Pr(>|t|)    
+(Intercept)   0.0927     0.5376    0.17     0.87    
+x             0.9461     0.0866   10.92  4.4e-06 ***
+---
+Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
+
+Residual standard error: 0.787 on 8 degrees of freedom
+Multiple R-squared:  0.937,	Adjusted R-squared:  0.929 
+F-statistic:  119 on 1 and 8 DF,  p-value: 4.39e-06
+
+> summary(mle(mll, lower=c(-Inf,-Inf, 0.01)))
+Maximum likelihood estimation
+
+Call:
+mle(minuslogl = mll, lower = c(-Inf, -Inf, 0.01))
+
+Coefficients:
+              Estimate Std. Error
+b.(Intercept) 0.092667   0.480869
+b.x           0.946061   0.077499
+sigma         0.703919   0.157400
+
+-2 log L: 21.357 
+> summary(mle(mll, lower=list(sigma=0.01)))
+Maximum likelihood estimation
+
+Call:
+mle(minuslogl = mll, lower = list(sigma = 0.01))
+
+Coefficients:
+              Estimate Std. Error
+b.(Intercept) 0.092667   0.480869
+b.x           0.946061   0.077499
+sigma         0.703919   0.157400
+
+-2 log L: 21.357 
+> 
+> confint(mle(mll, lower=list(sigma=0.01)))
+Profiling...
+                 2.5 % 97.5 %
+b.(Intercept) -0.94831 1.1336
+b.x            0.77829 1.1138
+sigma          0.48017 1.1755
+> plot(profile(mle(mll, lower=list(sigma=0.01))))
+> 
 > 
 > options(od)
 > 
@@ -205,7 +283,7 @@ Coefficients:
 > cleanEx()
 > options(digits = 7L)
 > base::cat("Time elapsed: ", proc.time() - base::get("ptime", pos = 'CheckExEnv'),"\n")
-Time elapsed:  0.665 0.011 0.68 0 0 
+Time elapsed:  0.623 0.014 0.638 0 0 
 > grDevices::dev.off()
 null device 
           1 
